[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_ML_tools_alex-awad"
version = "0.1.0"
authors = [
  { name="Alexander J. Awad", email="alexander.jon.awad@gmail.com" },
]
description = "A package that facilitates common operations in Machine Learning workflow with 'classical' Machine Learning models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib >=3.5.0",
    "seaborn >= 0.11.2",
    "numpy >=1.23.1",
    "pandas >=1.4.3",
    "scikit-learn >= 1.1.1",
    "xgboost >= 1.6.1",
    "tensorflow >= 2.9.1",
    "keras >= 2.9.0"
]

[project.optional-dependencies]
drawing = [
    "notebook",
    "ipywidgets"
]

[project.urls]
"Homepage" = "https://github.com/alex-awad/my_ML_tools"